// protoc --gofast_out=. p2p.proto

syntax = "proto3";

package ngtypes;

import "block.proto";

message P2PHeader {
    int32 network_id = 1;

    string uuid = 2;
    int64 timestamp = 3;
    bool broadcast = 4;

    bytes peer_key = 5; // act as the node ID
    bytes sign = 6;
}

// a protocol define a set of requests and responses
message P2PMessage {
    P2PHeader header = 1;
    uint64 nonce = 2;
    bytes payload = 3;
}

message PingPongPayload {
    uint64 block_height = 1;
    uint64 vault_height = 2;

    bytes latest_block_hash = 3;
    bytes latest_vault_hash = 4;
}

message GetBlocksPayload {
    uint64 from_checkpoint = 1;
    uint64 to_checkpoint = 2;
}

message BlocksPayload {
    repeated ngtypes.Block blocks = 1;
    uint64 latest_height = 2;
}
